# xpine

./: .gitignore  Cargo.toml  README.md
src/: address.rs  app.rs  auth.rs  browser.rs  compose.rs  config.rs  editor.rs  events.rs  mail.rs  main.rs  net.rs  prompt.rs  read.rs  search.rs  spell.rs  syntax.rs  theme.rs  ui.rs
