[package]
name = "xpine"
version = "0.1.0"
edition = "2024"

#[dependencies]
#lettre = { version = "0.11", features = ["builder", "smtp-transport", "rustls-tls"] }
#imap = "2.4"
#native-tls = "0.2"
#crossterm = "0.29.0"
#dirs = "6.0.0"
#syntect = "5.3.0"
#ropey = { version = "2.0.0-beta.1", features = ["metric_chars"] }
#include_dir = "0.7.4"
#chrono = "0.4.44"

[dependencies]
imap = "2.4"
native-tls = "0.2"
lettre = "0.11"
dirs = "6.0.0"
chrono = "0.4"
mailparse = "0.16.1"
webbrowser = "1.0"
include_dir = "0.7.4"
ropey = "1.6.1"
syntect = "5.2.0"
crossterm = "0.29.0"
