[package]
name = "xpine"
version = "0.0.12"
edition = "2024"

[dependencies]
imap = "2.4.1"
native-tls = "0.2"
lettre = "0.11"
dirs = "6.0.0"
chrono = "0.4"
mailparse = "0.16.1"
webbrowser = "1.0"
include_dir = "0.7.4"
ropey = "1.6.1"
syntect = "5.2.0"
crossterm = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
base64 = "0.22"
urlencoding = "2.1.3"
serde_json = "1.0.149"
keyring = "3.2.0"
